--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1551,7 +1551,7 @@
                 "fontFamily": "{config.fontFamily.primary}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.medium}",
-                "fontSize": "{config.fontSize.subtitle.text}"
+                "fontSize": "{app.fontSize.surface.subtitle.text}"
               },
               "type": "typography"
             },
@@ -1560,7 +1560,7 @@
                 "fontFamily": "{config.fontFamily.primary}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.semibold}",
-                "fontSize": "{config.fontSize.subtitle.text}"
+                "fontSize": "{app.fontSize.surface.subtitle.text}"
               },
               "type": "typography"
             }
@@ -1571,7 +1571,7 @@
                 "fontFamily": "{config.fontFamily.symbol}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.medium}",
-                "fontSize": "{config.fontSize.subtitle.symbol}"
+                "fontSize": "{app.fontSize.surface.subtitle.symbol}"
               },
               "type": "typography"
             },
@@ -1580,7 +1580,7 @@
                 "fontFamily": "{config.fontFamily.symbol}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.semibold}",
-                "fontSize": "{config.fontSize.subtitle.symbol}"
+                "fontSize": "{app.fontSize.surface.subtitle.symbol}"
               },
               "type": "typography"
             }
@@ -1595,7 +1595,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
                 },
@@ -1604,7 +1604,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
                 }
@@ -1615,7 +1615,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
                 },
@@ -1624,7 +1624,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
                 }
@@ -1637,7 +1637,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
                 },
@@ -1646,7 +1646,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
                 }
@@ -1657,7 +1657,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
                 },
@@ -1666,7 +1666,7 @@
                     "fontFamily": "{config.fontFamily.primary}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
                 }
@@ -1681,7 +1681,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.symbol.sm}"
                   },
                   "type": "typography"
                 },
@@ -1690,7 +1690,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.symbol.sm}"
                   },
                   "type": "typography"
                 }
@@ -1701,7 +1701,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.symbol.sm}"
                   },
                   "type": "typography"
                 },
@@ -1710,7 +1710,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
+                    "fontSize": "{app.fontSize.surface.body.symbol.sm}"
                   },
                   "type": "typography"
                 }
@@ -1723,7 +1723,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.symbol}"
+                    "fontSize": "{app.fontSize.surface.body.symbol.md}"
                   },
                   "type": "typography"
                 },
@@ -1732,7 +1732,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.symbol}"
+                    "fontSize": "{app.fontSize.surface.body.symbol.md}"
                   },
                   "type": "typography"
                 }
@@ -1743,7 +1743,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.symbol}"
+                    "fontSize": "{app.fontSize.surface.body.symbol.md}"
                   },
                   "type": "typography"
                 },
@@ -1752,7 +1752,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.symbol}"
+                    "fontSize": "{app.fontSize.surface.body.symbol.md}"
                   },
                   "type": "typography"
                 }
@@ -1767,7 +1767,7 @@
                 "fontFamily": "{config.fontFamily.primary}",
                 "fontWeight": "{config.fontWeight.text}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.caption.text}"
+                "fontSize": "{app.fontSize.surface.caption.text}"
               },
               "type": "typography"
             },
@@ -1776,7 +1776,7 @@
                 "fontFamily": "{config.fontFamily.primary}",
                 "fontWeight": "{config.fontWeight.medium}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.caption.text}"
+                "fontSize": "{app.fontSize.surface.caption.text}"
               },
               "type": "typography"
             }
@@ -1787,7 +1787,7 @@
                 "fontFamily": "{config.fontFamily.symbol}",
                 "fontWeight": "{config.fontWeight.text}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.caption.symbol}"
+                "fontSize": "{app.fontSize.surface.caption.symbol}"
               },
               "type": "typography"
             },
@@ -1796,7 +1796,7 @@
                 "fontFamily": "{config.fontFamily.symbol}",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.caption.symbol}"
+                "fontSize": "{app.fontSize.surface.caption.symbol}"
               },
               "type": "typography"
             }
@@ -1809,7 +1809,7 @@
                 "fontFamily": "{config.fontFamily.primary}",
                 "fontWeight": "{config.fontWeight.medium}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.footnote.text}"
+                "fontSize": "{app.fontSize.surface.footnote.text}"
               },
               "type": "typography"
             },
@@ -1818,7 +1818,7 @@
                 "fontFamily": "{config.fontFamily.primary}",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.footnote.text}"
+                "fontSize": "{app.fontSize.surface.footnote.text}"
               },
               "type": "typography"
             }
@@ -1829,7 +1829,7 @@
                 "fontFamily": "{config.fontFamily.symbol}",
                 "fontWeight": "{config.fontWeight.text}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.footnote.symbol}"
+                "fontSize": "{app.fontSize.surface.footnote.symbol}"
               },
               "type": "typography"
             },
@@ -1838,7 +1838,7 @@
                 "fontFamily": "{config.fontFamily.symbol}",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
-                "fontSize": "{config.fontSize.footnote.symbol}"
+                "fontSize": "{app.fontSize.surface.footnote.symbol}"
               },
               "type": "typography"
             }
@@ -1852,7 +1852,7 @@
                   "fontFamily": "{config.fontFamily.code}",
                   "fontWeight": "{config.fontWeight.text}",
                   "lineHeight": "160%",
-                  "fontSize": "{config.fontSize.code.text} - 0.125rem"
+                  "fontSize": "{app.fontSize.surface.code.text.sm}"
                 },
                 "type": "typography"
               },
@@ -1861,7 +1861,7 @@
                   "fontFamily": "{config.fontFamily.code}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "160%",
-                  "fontSize": "{config.fontSize.code.text} - 0.125rem"
+                  "fontSize": "{app.fontSize.surface.code.text.sm}"
                 },
                 "type": "typography"
               }
@@ -1872,7 +1872,7 @@
                   "fontFamily": "{config.fontFamily.code}",
                   "fontWeight": "{config.fontWeight.text}",
                   "lineHeight": "160%",
-                  "fontSize": "{config.fontSize.code.text}"
+                  "fontSize": "{app.fontSize.surface.code.text.md}"
                 },
                 "type": "typography"
               },
@@ -1881,7 +1881,7 @@
                   "fontFamily": "{config.fontFamily.code}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "160%",
-                  "fontSize": "{config.fontSize.code.text}"
+                  "fontSize": "{app.fontSize.surface.code.text.md}"
                 },
                 "type": "typography"
               }
