--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2432,6 +2432,86 @@
           "type": "boxShadow"
         }
       }
+    },
+    "fontFamily": {
+      "surface": {
+        "display": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "title": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "callout": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "subtitle": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "body": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "caption": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "footnote": {
+          "text": {
+            "value": "{config.fontFamily.primary}",
+            "type": "fontFamilies"
+          },
+          "symbol": {
+            "value": "{config.fontFamily.symbol}",
+            "type": "fontFamilies"
+          }
+        },
+        "code": {
+          "text": {
+            "value": "{config.fontFamily.code}",
+            "type": "fontFamilies"
+          }
+        }
+      }
     }
   }
 }
