--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1171,7 +1171,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "95%",
                   "fontSize": "{app.fontSize.surface.display.text.sm}"
@@ -1180,7 +1180,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "95%",
                   "fontSize": "{app.fontSize.surface.display.text.sm}"
@@ -1191,7 +1191,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "90%",
                   "fontSize": "{app.fontSize.surface.display.text.md}"
@@ -1200,7 +1200,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "90%",
                   "fontSize": "{app.fontSize.surface.display.text.md}"
@@ -1211,7 +1211,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "fontSize": "{app.fontSize.surface.display.text.lg}",
                   "lineHeight": "85%"
@@ -1220,7 +1220,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "fontSize": "{app.fontSize.surface.display.text.lg}",
                   "lineHeight": "85%"
@@ -1233,7 +1233,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.display.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "95%",
                   "fontSize": "{app.fontSize.surface.display.symbol.sm}"
@@ -1242,7 +1242,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.display.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "95%",
                   "fontSize": "{app.fontSize.surface.display.symbol.sm}"
@@ -1253,7 +1253,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.display.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "90%",
                   "fontSize": "{app.fontSize.surface.display.symbol.md}"
@@ -1262,7 +1262,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.display.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "90%",
                   "fontSize": "{app.fontSize.surface.display.symbol.md}"
@@ -1273,7 +1273,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.display.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "85%",
                   "fontSize": "{app.fontSize.surface.display.symbol.lg}"
@@ -1282,7 +1282,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.display.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "85%",
                   "fontSize": "{app.fontSize.surface.display.symbol.lg}"
@@ -1297,7 +1297,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.title.text}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "130%",
                   "fontSize": "{app.fontSize.surface.title.text.sm}"
@@ -1306,7 +1306,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.title.text}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "130%",
                   "fontSize": "{app.fontSize.surface.title.text.sm}"
@@ -1317,7 +1317,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.title.text}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "120%",
                   "fontSize": "{app.fontSize.surface.title.text.md}"
@@ -1326,7 +1326,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.title.text}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "120%",
                   "fontSize": "{app.fontSize.surface.title.text.md}"
@@ -1337,7 +1337,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.title.text}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "110%",
                   "fontSize": "{app.fontSize.surface.title.text.lg}"
@@ -1346,7 +1346,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.title.text}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "110%",
                   "fontSize": "{app.fontSize.surface.title.text.lg}"
@@ -1359,7 +1359,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.title.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "130%",
                   "fontSize": "{app.fontSize.surface.title.symbol.sm}"
@@ -1368,7 +1368,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.title.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "130%",
                   "fontSize": "{app.fontSize.surface.title.symbol.sm}"
@@ -1379,7 +1379,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.title.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "120%",
                   "fontSize": "{app.fontSize.surface.title.symbol.md}"
@@ -1388,7 +1388,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.title.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "120%",
                   "fontSize": "{app.fontSize.surface.title.symbol.md}"
@@ -1399,7 +1399,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.title.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "110%",
                   "fontSize": "{app.fontSize.surface.title.symbol.lg}"
@@ -1408,7 +1408,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.title.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "110%",
                   "fontSize": "{app.fontSize.surface.title.symbol.lg}"
@@ -1423,7 +1423,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.text.sm}"
@@ -1432,7 +1432,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.text.sm}"
@@ -1443,7 +1443,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.text.md}"
@@ -1452,7 +1452,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.text.md}"
@@ -1463,7 +1463,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.text.lg}"
@@ -1472,7 +1472,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.text.lg}"
@@ -1485,7 +1485,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.symbol.sm}"
@@ -1494,7 +1494,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.symbol.sm}"
@@ -1505,7 +1505,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.symbol.md}"
@@ -1514,7 +1514,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.symbol.md}"
@@ -1525,7 +1525,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.symbol.lg}"
@@ -1534,7 +1534,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{app.fontSize.surface.callout.symbol.lg}"
@@ -1548,7 +1548,7 @@
           "text": {
             "default": {
               "value": {
-                "fontFamily": "{config.fontFamily.primary}",
+                "fontFamily": "{app.fontFamily.surface.subtitle.text}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.medium}",
                 "fontSize": "{app.fontSize.surface.subtitle.text}"
@@ -1557,7 +1557,7 @@
             },
             "strong": {
               "value": {
-                "fontFamily": "{config.fontFamily.primary}",
+                "fontFamily": "{app.fontFamily.surface.subtitle.text}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "fontSize": "{app.fontSize.surface.subtitle.text}"
@@ -1568,7 +1568,7 @@
           "symbol": {
             "default": {
               "value": {
-                "fontFamily": "{config.fontFamily.symbol}",
+                "fontFamily": "{app.fontFamily.surface.subtitle.symbol}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.medium}",
                 "fontSize": "{app.fontSize.surface.subtitle.symbol}"
@@ -1577,7 +1577,7 @@
             },
             "strong": {
               "value": {
-                "fontFamily": "{config.fontFamily.symbol}",
+                "fontFamily": "{app.fontFamily.surface.subtitle.symbol}",
                 "lineHeight": "140%",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "fontSize": "{app.fontSize.surface.subtitle.symbol}"
